2012-04-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* filefuncs.c (do_chdir, do_stat): Replace update_ERRNO() with
	update_ERRNO_int(errno).
	* fork.c (do_fork, do_waitpid): Ditto.
	* readfile.c (do_readfile): Ditto.
	* rwarray.c (do_writea, do_reada): Ditto.

2012-03-25         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am: Major cleanup.  Use libtool options -module and
	-avoid-version to create the modules properly without my local hack
	to override the default behavior.

2012-03-25         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* .gitignore: New file to ignore files created by libtool (including
	binaries and associated metadata).

2012-03-21         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (INCLUDES): Remove -I$(top_srcdir)/intl.

2012-03-20         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am: New file to build and install shared libraries.
	* arrayparm.c (do_mkarray): Get it to compile by removing 2nd arg
	to assoc_clear.
	* filefuncs.c (do_stat): Ditto.

2011-08-31         John Haque     <j.eh@mchsi.com>
        * arrayparm.c, filefuncs.c, fork.c, ordchr.c, readfile.c,
        rwarray.c, testarg.c: Updated.

2011-06-23         Arnold D. Robbins     <arnold@skeeve.com>

	* ChangeLog.0: Rotated ChangeLog into this file.
	* ChangeLog: Created anew for gawk 4.0.0 and on.
	* 4.0.0: Release tar ball made.