@@ -41,7 +41,7 @@ int plugin_is_GPL_compatible;
 
 /* do_readfile --- read a file into memory */
 
-NODE *
+static NODE *
 do_readfile(int nargs)
 {
 	NODE *filename;
